k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockmania
  namespace: stockmania
spec:
  selector:
    app: stockmania
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
